k8s/backend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: posts-api-service
  namespace: backend

spec:
  type: ClusterIP

  selector:
    app: posts-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
